assets/css/header.scss
@import "constants";

#logo {
  margin: 0;
  img {
    margin-top: 25px;
    max-width: 200px;
    width: 100%;
  }
}

#sidebar {
  position: fixed;
  top: 0;
  width: 26%;
  margin: 0 30px;
}

#mobile_menu {
  display: none;
  float: right;
  font-size: 20px;
}

/* Only top and bottom padding for first header */

#top_time {
  font-weight: 700;
  padding: 40px;
  margin: 0;
}

/* Responsive Changes */

@media (max-width: $responsive_start) {
  #logo {
    float: left;
    width: 30px;
    img {
      margin-top: 0;
    }
  }

  h1 {
    font-size: 25px;
    float: left;
    margin: 0;
    padding-left: 10px;
  }

  #sidebar {
    margin: 0;
    z-index: 9;
    width: 100%;
    text-align: center;
    background-color: #fffe;
    border-bottom: 1px solid #e2e2e2;
    padding: 15px;
    box-sizing: border-box;
  }

  #mobile_menu {
    display: block;
  }
}

